--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@ yarn-error.log*
 next-env.d.ts
 
 /app/generated/prisma
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
