--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest"
+    "test": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.946.0",
+    "@aws-sdk/lib-storage": "^3.948.0",
     "@aws-sdk/s3-presigned-post": "^3.946.0",
     "@aws-sdk/s3-request-presigner": "^3.946.0",
     "@hookform/resolvers": "^5.2.2",
@@ -40,7 +43,10 @@
     "@trpc/client": "^11.7.2",
     "@trpc/react-query": "^11.7.2",
     "@trpc/server": "^11.7.2",
+    "@types/archiver": "^7.0.0",
+    "@types/unzipper": "^0.10.11",
     "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
@@ -56,6 +62,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.3",
     "openai": "^6.9.1",
+    "p-limit": "^7.2.0",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -67,6 +74,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
+    "unzipper": "^0.12.3",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
@@ -86,6 +94,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.15",
+    "@playwright/test": "^1.49.0"
   }
 }
