--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@sentry/nextjs": "^10.32.1",
+    "@sentry/nextjs": "^10",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-table": "^8.21.3",
@@ -57,6 +57,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "inngest": "^3.46.0",
+    "import-in-the-middle": "^2.0.0",
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.555.0",
@@ -70,6 +71,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^3.0.6",
+    "require-in-the-middle": "^8.0.1",
     "resend": "^6.5.2",
     "server-only": "^0.0.1",
     "sharp": "^0.34.5",
