--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.946.0",
+    "@aws-sdk/client-s3": "^3.958.0",
     "@aws-sdk/lib-storage": "^3.948.0",
     "@aws-sdk/s3-presigned-post": "^3.946.0",
     "@aws-sdk/s3-request-presigner": "^3.946.0",
@@ -47,6 +47,8 @@
     "@trpc/server": "^11.7.2",
     "@types/archiver": "^7.0.0",
     "@types/unzipper": "^0.10.11",
+    "@uppy/aws-s3": "4.3.2",
+    "@uppy/core": "^4.5.2",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "better-auth": "^1.4.5",
@@ -56,8 +58,8 @@
     "docx": "^9.5.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
-    "inngest": "^3.46.0",
     "import-in-the-middle": "^2.0.0",
+    "inngest": "^3.46.0",
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.555.0",
