--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.958.0",
-    "@aws-sdk/lib-storage": "^3.948.0",
-    "@aws-sdk/s3-presigned-post": "^3.946.0",
-    "@aws-sdk/s3-request-presigner": "^3.946.0",
+    "@aws-sdk/client-s3": "3.958.0",
+    "@aws-sdk/lib-storage": "3.958.0",
+    "@aws-sdk/s3-presigned-post": "3.958.0",
+    "@aws-sdk/s3-request-presigner": "3.958.0",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
     "@paralleldrive/cuid2": "^3.0.4",
@@ -102,5 +102,11 @@
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.15"
+  }
+  ,
+  "pnpm": {
+    "overrides": {
+      "@smithy/types": "4.11.0"
+    }
   }
 }
